// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`show help $ version-management mismatches 1`] = `
"
error: null
signal: null
status: 1
stderr: |+

  nested-wrkspc version-management mismatches <directory>

  Manage mismatched internal dependency versions

  Positionals:
    directory  Directory of monorepo                           [string] [required]

  Options:
    --version               Show version number                          [boolean]
    --help                  Show help                                    [boolean]
    --update, -u            Automatically update dependency versions to match
                            their source                [boolean] [default: false]
    --checker, -c           Checker to be used
     [string] [choices: \\"ANY\\", \\"EQUAL\\", \\"TILDA_EQUAL\\", \\"CARET_EQUAL\\", \\"EQUAL_MIN\\",
                   \\"TILDA_MIN\\", \\"CARET_MIN\\", \\"EQUAL_OR_ANY\\", \\"TILDA_EQUAL_OR_ANY\\",
                     \\"CARET_EQUAL_OR_ANY\\", \\"EQUAL_MIN_OR_ANY\\", \\"TILDA_MIN_OR_ANY\\",
                         \\"CARET_MIN_OR_ANY\\", \\"ANY_OR_EQUAL\\", \\"ANY_OR_TILDA_EQUAL\\",
                     \\"ANY_OR_CARET_EQUAL\\", \\"ANY_OR_EQUAL_MIN\\", \\"ANY_OR_TILDA_MIN\\",
                               \\"ANY_OR_CARET_MIN\\"] [default: \\"CARET_EQUAL_OR_ANY\\"]
    --jsonOutput, --json    Output json instead of readdable text
                                                        [boolean] [default: false]
    --jsonOutputIndent      JSON output indentation if --jsonOutput is enabled
                                                             [number] [default: 2]
    --noExitStatus          Do not exit with code 1 when there are outdated
                            dependencies                [boolean] [default: false]
    --noPrint, --quiet, -q  Do not print mismatches to stdout
                                                        [boolean] [default: false]

  Not enough non-option arguments: got 0, need at least 1

stdout: ((EMPTY))

"
`;

exports[`show help $ version-management mismatches 2`] = `
"
after:
  all:
    - root
    - root/matched
    - root/matched/matched000
    - root/matched/matched000/package.json
    - root/matched/matched001
    - root/mismatched
    - root/mismatched/mismatched000
    - root/mismatched/mismatched000/package.json
    - root/mismatched/mismatched001
    - root/package.json
  directories:
    - root
    - root/matched
    - root/matched/matched000
    - root/mismatched
    - root/mismatched/mismatched000
  fileContents:
    root/matched/matched000/package.json: |
      {
        \\"name\\": \\"matched000\\",
        \\"version\\": \\"1.2.3\\"
      }
    root/matched/matched001: |
      package.json: |
        {
          \\"name\\": \\"matched001\\",
          \\"version\\": \\"22.44.55\\"
        }
    root/mismatched/mismatched000/package.json: |
      {
        \\"name\\": \\"mismatched000\\",
        \\"version\\": \\"3.2.1\\",
        \\"description\\": \\"Requirement is too low\\"
      }
    root/mismatched/mismatched001: |
      package.json: |
        {
          \\"name\\": \\"mismatched001\\",
          \\"version\\": \\"4.5.6\\",
          \\"description\\": \\"Requirement is too high\\"
        }
    root/package.json: |
      {
        \\"version\\": \\"0.0.0\\",
        \\"private\\": true,
        \\"dependencies\\": {
          \\"matched000\\": \\"1.2.3\\",
          \\"mismatched000\\": \\"^2.2.3\\",
          \\"mismatched001\\": \\"^5.5.6\\",
          \\"matched001\\": \\"*\\"
        }
      }
  files:
    - root/matched/matched000/package.json
    - root/matched/matched001
    - root/mismatched/mismatched000/package.json
    - root/mismatched/mismatched001
    - root/package.json
before:
  all:
    - root
    - root/matched
    - root/matched/matched000
    - root/matched/matched000/package.json
    - root/matched/matched001
    - root/mismatched
    - root/mismatched/mismatched000
    - root/mismatched/mismatched000/package.json
    - root/mismatched/mismatched001
    - root/package.json
  directories:
    - root
    - root/matched
    - root/matched/matched000
    - root/mismatched
    - root/mismatched/mismatched000
  fileContents:
    root/matched/matched000/package.json: |
      {
        \\"name\\": \\"matched000\\",
        \\"version\\": \\"1.2.3\\"
      }
    root/matched/matched001: |
      package.json: |
        {
          \\"name\\": \\"matched001\\",
          \\"version\\": \\"22.44.55\\"
        }
    root/mismatched/mismatched000/package.json: |
      {
        \\"name\\": \\"mismatched000\\",
        \\"version\\": \\"3.2.1\\",
        \\"description\\": \\"Requirement is too low\\"
      }
    root/mismatched/mismatched001: |
      package.json: |
        {
          \\"name\\": \\"mismatched001\\",
          \\"version\\": \\"4.5.6\\",
          \\"description\\": \\"Requirement is too high\\"
        }
    root/package.json: |
      {
        \\"version\\": \\"0.0.0\\",
        \\"private\\": true,
        \\"dependencies\\": {
          \\"matched000\\": \\"1.2.3\\",
          \\"mismatched000\\": \\"^2.2.3\\",
          \\"mismatched001\\": \\"^5.5.6\\",
          \\"matched001\\": \\"*\\"
        }
      }
  files:
    - root/matched/matched000/package.json
    - root/matched/matched001
    - root/mismatched/mismatched000/package.json
    - root/mismatched/mismatched001
    - root/package.json

"
`;

exports[`with modifying filesystem with json stdout $ version-management mismatches --update --jsonOutput . 1`] = `
"
error: null
signal: null
status: 0
stderr: ((EMPTY))
stdout: |+

  [
    {
      \\"dependant\\": {
        \\"name\\": null,
        \\"path\\": \\"root\\"
      },
      \\"list\\": [
        {
          \\"name\\": \\"matched000\\",
          \\"type\\": \\"prod\\",
          \\"update\\": \\"^1.2.3\\",
          \\"outdated\\": \\"1.2.3\\",
          \\"upstream\\": \\"1.2.3\\"
        },
        {
          \\"name\\": \\"mismatched000\\",
          \\"type\\": \\"prod\\",
          \\"update\\": \\"^3.2.1\\",
          \\"outdated\\": \\"^2.2.3\\",
          \\"upstream\\": \\"3.2.1\\"
        }
      ]
    }
  ]


"
`;

exports[`with modifying filesystem with json stdout $ version-management mismatches --update --jsonOutput . 2`] = `
"
after:
  all:
    - root
    - root/matched
    - root/matched/matched000
    - root/matched/matched000/package.json
    - root/matched/matched001
    - root/mismatched
    - root/mismatched/mismatched000
    - root/mismatched/mismatched000/package.json
    - root/mismatched/mismatched001
    - root/package.json
  directories:
    - root
    - root/matched
    - root/matched/matched000
    - root/mismatched
    - root/mismatched/mismatched000
  fileContents:
    root/matched/matched000/package.json: |
      {
        \\"name\\": \\"matched000\\",
        \\"version\\": \\"1.2.3\\"
      }
    root/matched/matched001: |
      package.json: |
        {
          \\"name\\": \\"matched001\\",
          \\"version\\": \\"22.44.55\\"
        }
    root/mismatched/mismatched000/package.json: |
      {
        \\"name\\": \\"mismatched000\\",
        \\"version\\": \\"3.2.1\\",
        \\"description\\": \\"Requirement is too low\\"
      }
    root/mismatched/mismatched001: |
      package.json: |
        {
          \\"name\\": \\"mismatched001\\",
          \\"version\\": \\"4.5.6\\",
          \\"description\\": \\"Requirement is too high\\"
        }
    root/package.json: |
      {
        \\"version\\": \\"0.0.0\\",
        \\"private\\": true,
        \\"dependencies\\": {
          \\"matched000\\": \\"^1.2.3\\",
          \\"mismatched000\\": \\"^3.2.1\\",
          \\"mismatched001\\": \\"^5.5.6\\",
          \\"matched001\\": \\"*\\"
        }
      }
  files:
    - root/matched/matched000/package.json
    - root/matched/matched001
    - root/mismatched/mismatched000/package.json
    - root/mismatched/mismatched001
    - root/package.json
before:
  all:
    - root
    - root/matched
    - root/matched/matched000
    - root/matched/matched000/package.json
    - root/matched/matched001
    - root/mismatched
    - root/mismatched/mismatched000
    - root/mismatched/mismatched000/package.json
    - root/mismatched/mismatched001
    - root/package.json
  directories:
    - root
    - root/matched
    - root/matched/matched000
    - root/mismatched
    - root/mismatched/mismatched000
  fileContents:
    root/matched/matched000/package.json: |
      {
        \\"name\\": \\"matched000\\",
        \\"version\\": \\"1.2.3\\"
      }
    root/matched/matched001: |
      package.json: |
        {
          \\"name\\": \\"matched001\\",
          \\"version\\": \\"22.44.55\\"
        }
    root/mismatched/mismatched000/package.json: |
      {
        \\"name\\": \\"mismatched000\\",
        \\"version\\": \\"3.2.1\\",
        \\"description\\": \\"Requirement is too low\\"
      }
    root/mismatched/mismatched001: |
      package.json: |
        {
          \\"name\\": \\"mismatched001\\",
          \\"version\\": \\"4.5.6\\",
          \\"description\\": \\"Requirement is too high\\"
        }
    root/package.json: |
      {
        \\"version\\": \\"0.0.0\\",
        \\"private\\": true,
        \\"dependencies\\": {
          \\"matched000\\": \\"1.2.3\\",
          \\"mismatched000\\": \\"^2.2.3\\",
          \\"mismatched001\\": \\"^5.5.6\\",
          \\"matched001\\": \\"*\\"
        }
      }
  files:
    - root/matched/matched000/package.json
    - root/matched/matched001
    - root/mismatched/mismatched000/package.json
    - root/mismatched/mismatched001
    - root/package.json

"
`;

exports[`with modifying filesystem with normal stdout $ version-management mismatches --update . 1`] = `
"
error: null
signal: null
status: 0
stderr: ((EMPTY))
stdout: |+

  * [anonymous] (path: root)
    - matched000 → ^1.2.3 (type: prod, upstream: 1.2.3, outdated: 1.2.3)
    - mismatched000 → ^3.2.1 (type: prod, upstream: 3.2.1, outdated: ^2.2.3)



"
`;

exports[`with modifying filesystem with normal stdout $ version-management mismatches --update . 2`] = `
"
after:
  all:
    - root
    - root/matched
    - root/matched/matched000
    - root/matched/matched000/package.json
    - root/matched/matched001
    - root/mismatched
    - root/mismatched/mismatched000
    - root/mismatched/mismatched000/package.json
    - root/mismatched/mismatched001
    - root/package.json
  directories:
    - root
    - root/matched
    - root/matched/matched000
    - root/mismatched
    - root/mismatched/mismatched000
  fileContents:
    root/matched/matched000/package.json: |
      {
        \\"name\\": \\"matched000\\",
        \\"version\\": \\"1.2.3\\"
      }
    root/matched/matched001: |
      package.json: |
        {
          \\"name\\": \\"matched001\\",
          \\"version\\": \\"22.44.55\\"
        }
    root/mismatched/mismatched000/package.json: |
      {
        \\"name\\": \\"mismatched000\\",
        \\"version\\": \\"3.2.1\\",
        \\"description\\": \\"Requirement is too low\\"
      }
    root/mismatched/mismatched001: |
      package.json: |
        {
          \\"name\\": \\"mismatched001\\",
          \\"version\\": \\"4.5.6\\",
          \\"description\\": \\"Requirement is too high\\"
        }
    root/package.json: |
      {
        \\"version\\": \\"0.0.0\\",
        \\"private\\": true,
        \\"dependencies\\": {
          \\"matched000\\": \\"^1.2.3\\",
          \\"mismatched000\\": \\"^3.2.1\\",
          \\"mismatched001\\": \\"^5.5.6\\",
          \\"matched001\\": \\"*\\"
        }
      }
  files:
    - root/matched/matched000/package.json
    - root/matched/matched001
    - root/mismatched/mismatched000/package.json
    - root/mismatched/mismatched001
    - root/package.json
before:
  all:
    - root
    - root/matched
    - root/matched/matched000
    - root/matched/matched000/package.json
    - root/matched/matched001
    - root/mismatched
    - root/mismatched/mismatched000
    - root/mismatched/mismatched000/package.json
    - root/mismatched/mismatched001
    - root/package.json
  directories:
    - root
    - root/matched
    - root/matched/matched000
    - root/mismatched
    - root/mismatched/mismatched000
  fileContents:
    root/matched/matched000/package.json: |
      {
        \\"name\\": \\"matched000\\",
        \\"version\\": \\"1.2.3\\"
      }
    root/matched/matched001: |
      package.json: |
        {
          \\"name\\": \\"matched001\\",
          \\"version\\": \\"22.44.55\\"
        }
    root/mismatched/mismatched000/package.json: |
      {
        \\"name\\": \\"mismatched000\\",
        \\"version\\": \\"3.2.1\\",
        \\"description\\": \\"Requirement is too low\\"
      }
    root/mismatched/mismatched001: |
      package.json: |
        {
          \\"name\\": \\"mismatched001\\",
          \\"version\\": \\"4.5.6\\",
          \\"description\\": \\"Requirement is too high\\"
        }
    root/package.json: |
      {
        \\"version\\": \\"0.0.0\\",
        \\"private\\": true,
        \\"dependencies\\": {
          \\"matched000\\": \\"1.2.3\\",
          \\"mismatched000\\": \\"^2.2.3\\",
          \\"mismatched001\\": \\"^5.5.6\\",
          \\"matched001\\": \\"*\\"
        }
      }
  files:
    - root/matched/matched000/package.json
    - root/matched/matched001
    - root/mismatched/mismatched000/package.json
    - root/mismatched/mismatched001
    - root/package.json

"
`;

exports[`with modifying filesystem without stdout $ version-management mismatches --update --noPrint . 1`] = `
"
error: null
signal: null
status: 0
stderr: ((EMPTY))
stdout: ((EMPTY))

"
`;

exports[`with modifying filesystem without stdout $ version-management mismatches --update --noPrint . 2`] = `
"
after:
  all:
    - root
    - root/matched
    - root/matched/matched000
    - root/matched/matched000/package.json
    - root/matched/matched001
    - root/mismatched
    - root/mismatched/mismatched000
    - root/mismatched/mismatched000/package.json
    - root/mismatched/mismatched001
    - root/package.json
  directories:
    - root
    - root/matched
    - root/matched/matched000
    - root/mismatched
    - root/mismatched/mismatched000
  fileContents:
    root/matched/matched000/package.json: |
      {
        \\"name\\": \\"matched000\\",
        \\"version\\": \\"1.2.3\\"
      }
    root/matched/matched001: |
      package.json: |
        {
          \\"name\\": \\"matched001\\",
          \\"version\\": \\"22.44.55\\"
        }
    root/mismatched/mismatched000/package.json: |
      {
        \\"name\\": \\"mismatched000\\",
        \\"version\\": \\"3.2.1\\",
        \\"description\\": \\"Requirement is too low\\"
      }
    root/mismatched/mismatched001: |
      package.json: |
        {
          \\"name\\": \\"mismatched001\\",
          \\"version\\": \\"4.5.6\\",
          \\"description\\": \\"Requirement is too high\\"
        }
    root/package.json: |
      {
        \\"version\\": \\"0.0.0\\",
        \\"private\\": true,
        \\"dependencies\\": {
          \\"matched000\\": \\"^1.2.3\\",
          \\"mismatched000\\": \\"^3.2.1\\",
          \\"mismatched001\\": \\"^5.5.6\\",
          \\"matched001\\": \\"*\\"
        }
      }
  files:
    - root/matched/matched000/package.json
    - root/matched/matched001
    - root/mismatched/mismatched000/package.json
    - root/mismatched/mismatched001
    - root/package.json
before:
  all:
    - root
    - root/matched
    - root/matched/matched000
    - root/matched/matched000/package.json
    - root/matched/matched001
    - root/mismatched
    - root/mismatched/mismatched000
    - root/mismatched/mismatched000/package.json
    - root/mismatched/mismatched001
    - root/package.json
  directories:
    - root
    - root/matched
    - root/matched/matched000
    - root/mismatched
    - root/mismatched/mismatched000
  fileContents:
    root/matched/matched000/package.json: |
      {
        \\"name\\": \\"matched000\\",
        \\"version\\": \\"1.2.3\\"
      }
    root/matched/matched001: |
      package.json: |
        {
          \\"name\\": \\"matched001\\",
          \\"version\\": \\"22.44.55\\"
        }
    root/mismatched/mismatched000/package.json: |
      {
        \\"name\\": \\"mismatched000\\",
        \\"version\\": \\"3.2.1\\",
        \\"description\\": \\"Requirement is too low\\"
      }
    root/mismatched/mismatched001: |
      package.json: |
        {
          \\"name\\": \\"mismatched001\\",
          \\"version\\": \\"4.5.6\\",
          \\"description\\": \\"Requirement is too high\\"
        }
    root/package.json: |
      {
        \\"version\\": \\"0.0.0\\",
        \\"private\\": true,
        \\"dependencies\\": {
          \\"matched000\\": \\"1.2.3\\",
          \\"mismatched000\\": \\"^2.2.3\\",
          \\"mismatched001\\": \\"^5.5.6\\",
          \\"matched001\\": \\"*\\"
        }
      }
  files:
    - root/matched/matched000/package.json
    - root/matched/matched001
    - root/mismatched/mismatched000/package.json
    - root/mismatched/mismatched001
    - root/package.json

"
`;

exports[`without modifying filesystem $ version-management mismatches . 1`] = `
"
error: null
signal: null
status: 1
stderr: ((EMPTY))
stdout: |+

  * [anonymous] (path: root)
    - matched000 → ^1.2.3 (type: prod, upstream: 1.2.3, outdated: 1.2.3)
    - mismatched000 → ^3.2.1 (type: prod, upstream: 3.2.1, outdated: ^2.2.3)



"
`;

exports[`without modifying filesystem $ version-management mismatches . 2`] = `
"
after:
  all:
    - root
    - root/matched
    - root/matched/matched000
    - root/matched/matched000/package.json
    - root/matched/matched001
    - root/mismatched
    - root/mismatched/mismatched000
    - root/mismatched/mismatched000/package.json
    - root/mismatched/mismatched001
    - root/package.json
  directories:
    - root
    - root/matched
    - root/matched/matched000
    - root/mismatched
    - root/mismatched/mismatched000
  fileContents:
    root/matched/matched000/package.json: |
      {
        \\"name\\": \\"matched000\\",
        \\"version\\": \\"1.2.3\\"
      }
    root/matched/matched001: |
      package.json: |
        {
          \\"name\\": \\"matched001\\",
          \\"version\\": \\"22.44.55\\"
        }
    root/mismatched/mismatched000/package.json: |
      {
        \\"name\\": \\"mismatched000\\",
        \\"version\\": \\"3.2.1\\",
        \\"description\\": \\"Requirement is too low\\"
      }
    root/mismatched/mismatched001: |
      package.json: |
        {
          \\"name\\": \\"mismatched001\\",
          \\"version\\": \\"4.5.6\\",
          \\"description\\": \\"Requirement is too high\\"
        }
    root/package.json: |
      {
        \\"version\\": \\"0.0.0\\",
        \\"private\\": true,
        \\"dependencies\\": {
          \\"matched000\\": \\"1.2.3\\",
          \\"mismatched000\\": \\"^2.2.3\\",
          \\"mismatched001\\": \\"^5.5.6\\",
          \\"matched001\\": \\"*\\"
        }
      }
  files:
    - root/matched/matched000/package.json
    - root/matched/matched001
    - root/mismatched/mismatched000/package.json
    - root/mismatched/mismatched001
    - root/package.json
before:
  all:
    - root
    - root/matched
    - root/matched/matched000
    - root/matched/matched000/package.json
    - root/matched/matched001
    - root/mismatched
    - root/mismatched/mismatched000
    - root/mismatched/mismatched000/package.json
    - root/mismatched/mismatched001
    - root/package.json
  directories:
    - root
    - root/matched
    - root/matched/matched000
    - root/mismatched
    - root/mismatched/mismatched000
  fileContents:
    root/matched/matched000/package.json: |
      {
        \\"name\\": \\"matched000\\",
        \\"version\\": \\"1.2.3\\"
      }
    root/matched/matched001: |
      package.json: |
        {
          \\"name\\": \\"matched001\\",
          \\"version\\": \\"22.44.55\\"
        }
    root/mismatched/mismatched000/package.json: |
      {
        \\"name\\": \\"mismatched000\\",
        \\"version\\": \\"3.2.1\\",
        \\"description\\": \\"Requirement is too low\\"
      }
    root/mismatched/mismatched001: |
      package.json: |
        {
          \\"name\\": \\"mismatched001\\",
          \\"version\\": \\"4.5.6\\",
          \\"description\\": \\"Requirement is too high\\"
        }
    root/package.json: |
      {
        \\"version\\": \\"0.0.0\\",
        \\"private\\": true,
        \\"dependencies\\": {
          \\"matched000\\": \\"1.2.3\\",
          \\"mismatched000\\": \\"^2.2.3\\",
          \\"mismatched001\\": \\"^5.5.6\\",
          \\"matched001\\": \\"*\\"
        }
      }
  files:
    - root/matched/matched000/package.json
    - root/matched/matched001
    - root/mismatched/mismatched000/package.json
    - root/mismatched/mismatched001
    - root/package.json

"
`;

exports[`without modifying filesystem $ version-management mismatches --jsonOutput . 1`] = `
"
error: null
signal: null
status: 0
stderr: ((EMPTY))
stdout: |+

  [
    {
      \\"dependant\\": {
        \\"name\\": null,
        \\"path\\": \\"root\\"
      },
      \\"list\\": [
        {
          \\"name\\": \\"matched000\\",
          \\"type\\": \\"prod\\",
          \\"update\\": \\"^1.2.3\\",
          \\"outdated\\": \\"1.2.3\\",
          \\"upstream\\": \\"1.2.3\\"
        },
        {
          \\"name\\": \\"mismatched000\\",
          \\"type\\": \\"prod\\",
          \\"update\\": \\"^3.2.1\\",
          \\"outdated\\": \\"^2.2.3\\",
          \\"upstream\\": \\"3.2.1\\"
        }
      ]
    }
  ]


"
`;

exports[`without modifying filesystem $ version-management mismatches --jsonOutput . 2`] = `
"
after:
  all:
    - root
    - root/matched
    - root/matched/matched000
    - root/matched/matched000/package.json
    - root/matched/matched001
    - root/mismatched
    - root/mismatched/mismatched000
    - root/mismatched/mismatched000/package.json
    - root/mismatched/mismatched001
    - root/package.json
  directories:
    - root
    - root/matched
    - root/matched/matched000
    - root/mismatched
    - root/mismatched/mismatched000
  fileContents:
    root/matched/matched000/package.json: |
      {
        \\"name\\": \\"matched000\\",
        \\"version\\": \\"1.2.3\\"
      }
    root/matched/matched001: |
      package.json: |
        {
          \\"name\\": \\"matched001\\",
          \\"version\\": \\"22.44.55\\"
        }
    root/mismatched/mismatched000/package.json: |
      {
        \\"name\\": \\"mismatched000\\",
        \\"version\\": \\"3.2.1\\",
        \\"description\\": \\"Requirement is too low\\"
      }
    root/mismatched/mismatched001: |
      package.json: |
        {
          \\"name\\": \\"mismatched001\\",
          \\"version\\": \\"4.5.6\\",
          \\"description\\": \\"Requirement is too high\\"
        }
    root/package.json: |
      {
        \\"version\\": \\"0.0.0\\",
        \\"private\\": true,
        \\"dependencies\\": {
          \\"matched000\\": \\"1.2.3\\",
          \\"mismatched000\\": \\"^2.2.3\\",
          \\"mismatched001\\": \\"^5.5.6\\",
          \\"matched001\\": \\"*\\"
        }
      }
  files:
    - root/matched/matched000/package.json
    - root/matched/matched001
    - root/mismatched/mismatched000/package.json
    - root/mismatched/mismatched001
    - root/package.json
before:
  all:
    - root
    - root/matched
    - root/matched/matched000
    - root/matched/matched000/package.json
    - root/matched/matched001
    - root/mismatched
    - root/mismatched/mismatched000
    - root/mismatched/mismatched000/package.json
    - root/mismatched/mismatched001
    - root/package.json
  directories:
    - root
    - root/matched
    - root/matched/matched000
    - root/mismatched
    - root/mismatched/mismatched000
  fileContents:
    root/matched/matched000/package.json: |
      {
        \\"name\\": \\"matched000\\",
        \\"version\\": \\"1.2.3\\"
      }
    root/matched/matched001: |
      package.json: |
        {
          \\"name\\": \\"matched001\\",
          \\"version\\": \\"22.44.55\\"
        }
    root/mismatched/mismatched000/package.json: |
      {
        \\"name\\": \\"mismatched000\\",
        \\"version\\": \\"3.2.1\\",
        \\"description\\": \\"Requirement is too low\\"
      }
    root/mismatched/mismatched001: |
      package.json: |
        {
          \\"name\\": \\"mismatched001\\",
          \\"version\\": \\"4.5.6\\",
          \\"description\\": \\"Requirement is too high\\"
        }
    root/package.json: |
      {
        \\"version\\": \\"0.0.0\\",
        \\"private\\": true,
        \\"dependencies\\": {
          \\"matched000\\": \\"1.2.3\\",
          \\"mismatched000\\": \\"^2.2.3\\",
          \\"mismatched001\\": \\"^5.5.6\\",
          \\"matched001\\": \\"*\\"
        }
      }
  files:
    - root/matched/matched000/package.json
    - root/matched/matched001
    - root/mismatched/mismatched000/package.json
    - root/mismatched/mismatched001
    - root/package.json

"
`;
